<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="16dp"
    tools:context=".Activity.RegistrationActivity">



    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
         >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_reg"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:paddingBottom="20dp"
            />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:padding="3dp"
          >



          <EditText
              android:id="@+id/et_login"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/hint_login"
              android:autofillHints="username"
              android:inputType="textPersonName"
              android:textSize="@dimen/size_title"
              />


      </LinearLayout>


     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="3dp">




         <EditText
             android:id="@+id/et_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/hint_password"
             android:inputType="textPassword"
             android:textSize="@dimen/size_title"
             android:autofillHints="password"
             />

     </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="3dp">




            <EditText
                android:id="@+id/et_password_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password_check"
                android:inputType="textPassword"
                android:textSize="@dimen/size_title"
                android:autofillHints="password"
                />

        </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="13dp"
         android:gravity="center_horizontal"
         >

         <Button
             android:id="@+id/bt_registration"
             android:textSize="11sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/title_button_reg"
             android:textAppearance="@style/TextAppearance.AppCompat.Button" />

     </LinearLayout>

    </LinearLayout>

</LinearLayout>